add more general notes

--- a/Notes/basic-python.ipynb
+++ b/Notes/basic-python.ipynb
@@ -1,6 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract a substring from a string using the slicing operator [:].\n",
+    "\n",
+    "**Syntax:**\n",
+    "\n",
+    "`string[start:end:step]`\n",
+    "\n",
+    "- **start:** The index of the first character to include in the substring. (Default: 0)\n",
+    "- **end:** The index of the first character not to include in the substring. (Default: Length of the string)\n",
+    "- **step:** The number of characters to skip between each character in the substring. (Default: 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iterate over string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 1. Direct Iteration:\n",
+    "\n",
+    "my_string = \"Hello, World!\"\n",
+    "\n",
+    "for character in my_string:\n",
+    "    print(character)\n",
+    "\n",
+    "# This will print each character in the string on a new line.\n",
+    "\n",
+    "\n",
+    "# 2. Using the range() function and indexing:\n",
+    "\n",
+    "my_string = \"Python\"\n",
+    "\n",
+    "for i in range(len(my_string)):\n",
+    "    print(my_string[i])\n",
+    "\n",
+    "# This will print each character in the string on a new line, using the index to access each character.\n",
+    "\n",
+    "\n",
+    "# 3. Using enumerate() for index and character:\n",
+    "\n",
+    "my_string = \"Python\"\n",
+    "\n",
+    "for index, character in enumerate(my_string):\n",
+    "    print(f\"Index: {index}, Character: {character}\")\n",
+    "\n",
+    "# This will print each character along with its index in the string."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
