complete more sql problems

--- a/Notes/basic-python.ipynb
+++ b/Notes/basic-python.ipynb
@@ -115,6 +115,16 @@
     "# Delete elements from index 2 to 4 (exclusive)\n",
     "new_arr = arr[:2] + arr[4:]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hashmap Functions\n",
+    "***get()*** -> this will return the value at the provided key or return the provided default value\n",
+    "    EX. mapName.get(keyName, defaultValue) => dictionary.get(a, 0) -> will return 0 instead of null\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
