add more general python knowledge

--- a/Notes/basic-python.ipynb
+++ b/Notes/basic-python.ipynb
@@ -4,6 +4,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Get Type\n",
+    "`type(enter variable, object, or value here)`\n",
+    "\n",
+    "## Compare type\n",
+    "`instanceOf(variableName, str)` => enter value then the type you want to compare it to returns true/false\n",
+    "\n",
+    "# Dictionaries\n",
+    "`stock_info = { \"name\": \"APPL\", \"price\": 150.75, \"shares\": 10}`\n",
+    "\n",
+    "**Get all keys found in dictionary**\n",
+    "`stock_info.keys()`\n",
+    "\n",
+    "**Get all values found in dictionary**\n",
+    "`stock_info.values()`\n",
+    "\n",
+    "**Get all key/value pairs from dictionary**\n",
+    "`stock_info.items()`\n",
+    "\n",
+    "**Get value(s) for specified key from dictionary**\n",
+    "`stock_info.get('country')` => this will return `None` if it doesn't exist\n",
+    "`stock_info.get('country', \"Not found\")` => this will return the return value specified \"Not found\" if country key doesn't exist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Math \n",
+    "\n",
+    "**Automatically divide as decimal**\n",
+    "5 / 2 => 2.5 \n",
+    "\n",
+    "**Use double slash for rounding down to integer**\n",
+    "5 // 2 => 2\n",
+    "\n",
+    "**For negative numbers use decimal division then convert to integer**\n",
+    "int(-3/2) => -1\n",
+    "\n",
+    "since -3/2 => -2 we want it to round closer to 0\n",
+    "\n",
+    "# For Max/Min Integer\n",
+    "float(\"inf\")  => this is (+) infinity\n",
+    "float(\"-inf\")\n",
+    "\n",
+    "### Math Library\n",
+    "import math\n",
+    "\n",
+    "math.fmod(-10, 3)  => we would want to use math for modulus of (-) #'s because without returns an incorrect result\n",
+    "\n",
+    "math.floor(3/2) => round down\n",
+    "math.ceil(3/2) => round up\n",
+    "math.sqrt(number) => get the sqr root of the number/equation provided\n",
+    "math.pow(2, 3) => 2^3\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extract a substring from a string using the slicing operator [:].\n",
     "\n",
     "**Syntax:**\n",
@@ -114,6 +174,79 @@
     "\n",
     "# Delete elements from index 2 to 4 (exclusive)\n",
     "new_arr = arr[:2] + arr[4:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### arrays\n",
+    "arr = [1, 2, 3]\n",
+    "\n",
+    "#### Can be used as a stack (arrays are by default dynamic)\n",
+    "arr.append(4) => add value to the end [ 1, 2, 3, 4 ]\n",
+    "arr.pop() => [ 1, 2, 3, ] removes last value from the array\n",
+    "\n",
+    "arr.insert(1, 7) => at position 1 insert the value 7\n",
+    "[ 1, 7, 2, 3 ] \n",
+    "*this is O(n) time since it might have to go through the whole array to find the position to insert the value*\n",
+    "\n",
+    "**to index an array directly is constant time O(1)**\n",
+    "a[1] = 3\n",
+    "\n",
+    "\n",
+    "#### Initialize arr of size n with default value of 1\n",
+    "n = 5\n",
+    "arr = [1] * n\n",
+    "\n",
+    "#### Slicing an array\n",
+    "arr[1:3] => [ 2, 3] => does NOT include position 3\n",
+    "\n",
+    "#### Unpacking \n",
+    "a, b, c = [1, 2, 3] => make sure # of variables == # items in the array\n",
+    "\n",
+    "#### Loop through arrays\n",
+    "##### Using index\n",
+    "for i in range(len(arr)):\n",
+    "    print(arr[i])    \n",
+    "\n",
+    "###### without index\n",
+    "for n in arr:  => n is the VALUE found in each position\n",
+    "    print(n)\n",
+    "\n",
+    "###### with index and value\n",
+    "for i, val in enumerate(arr):\n",
+    "    print(i,n)\n",
+    "\n",
+    "##### Loop through multiple arrays simultaneously\n",
+    "###### with unpacking\n",
+    "nums1 = [1, 3, 5]\n",
+    "nums2 = [2, 4, 6]\n",
+    "\n",
+    "for n1, n2 in zip(nums1, nums2):\n",
+    "    print(n1,n2)\n",
+    "=> this makes individual arrays into a single array of pairs\n",
+    "\n",
+    "##### Reverse\n",
+    "arr.reverse()\n",
+    "\n",
+    "##### Sorting\n",
+    "arr.sort() => ascending order\n",
+    "arr.sort(reverse=True)\n",
+    "\n",
+    "\n",
+    "##### Custom sort (by length of string)\n",
+    "strArr = [\"bob\", \"alice\", \"janet\", \"tim\", \"Dee\"]\n",
+    "\n",
+    "strArr.sort(key=lambda x: len(x))\n",
+    "\n",
+    "* lambda is a function without a name\n",
+    "-> each array value will be set as x and return the length of each string\n",
+    "-> the length will then be mapped with the string value and sorted in ascending order based on their lengths"
    ]
   },
   {
